; ModuleID = '/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_query_on_alarm.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_query_on_alarm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_query = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 (i8**, i8**)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @query_on_alarm(%struct.rpc_query* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.rpc_query*, align 8
  store %struct.rpc_query* %0, %struct.rpc_query** %3, align 8
  %4 = load %struct.rpc_query*, %struct.rpc_query** %3, align 8
  %5 = getelementptr inbounds %struct.rpc_query, %struct.rpc_query* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32 (i8**, i8**)*, i32 (i8**, i8**)** %6, align 8
  %8 = icmp ne i32 (i8**, i8**)* %7, null
  br i1 %8, label %9, label %22

9:                                                ; preds = %1
  %10 = load %struct.rpc_query*, %struct.rpc_query** %3, align 8
  %11 = getelementptr inbounds %struct.rpc_query, %struct.rpc_query* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32 (i8**, i8**)*, i32 (i8**, i8**)** %12, align 8
  %14 = load %struct.rpc_query*, %struct.rpc_query** %3, align 8
  %15 = getelementptr inbounds %struct.rpc_query, %struct.rpc_query* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32 (i8**, i8**)*, i32 (i8**, i8**)** %16, align 8
  %18 = bitcast i32 (i8**, i8**)* %17 to i8**
  %19 = getelementptr inbounds i8*, i8** %18, i64 1
  %20 = bitcast %struct.rpc_query** %3 to i8**
  %21 = call i32 %13(i8** %19, i8** %20)
  store i32 %21, i32* %2, align 4
  br label %25

22:                                               ; preds = %1
  %23 = load %struct.rpc_query*, %struct.rpc_query** %3, align 8
  %24 = call i32 @default_on_alarm(%struct.rpc_query* %23)
  store i32 0, i32* %2, align 4
  br label %25

25:                                               ; preds = %22, %9
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @default_on_alarm(%struct.rpc_query*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
